SERVER-5353 Print capped collection scan on _id query warning message in appropriate cases.